<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Dark Notes</string>
    <string name="a_whitespace_or_linebreak_gesture_is_required_to_register_the_current_word">A whitespace or linebreak gesture is required to register the current word.\n\nIMPORTANT: Make sure the line goes next from one edge to the other to be registered !</string>
    <string name="about">About</string>
    <string name="aboutMessage">By Marcelo Morgade\nmorgade@gmail.com\n\nRatings and comments welcome at Google Play !</string>
    <string name="append">Append</string>
    <string name="append_or_restart">Append or restart note ? Restarting will delete ALL current content !</string>
    <string name="capture_feedback">Capture Feedback</string>
    <string name="capture_help">Capture Help</string>
    <string name="capture_help_summary">Learn more about how Dark Notes capture your text before change settings</string>
    <string name="capture_method">Capture Method</string>
    <string name="capture_per_gesture">Capture per gesture</string>
    <string name="capture_per_gesture_help">A "gesture" means touching the screen with a finger/stylus and dragging it to draw something. The gesture ends when you take the finger/stylus off the screen. Using "Capture per gesture" mode, Dark Notes will register your draw as a letter each time a gesture ends. Remember to draw a whitespace gesture after the last letter of a word</string>
    <string name="capture_per_ws_lb_gesture">Capture per WS/LB gesture</string>
    <string name="capture_per_ws_lb_help">Recommended for large screens. You draw a full word and Dark Notes will register it only when a whitespace or linebreak gesture is drawn over the word (as explained above)</string>
    <string name="capture_settings">Capture Settings</string>
    <string name="capture_visual_style">Capture Visual Style</string>
    <string name="capture_warning">You should learn and set your preferred word capture settings before starting your first note.\r\nView capture settings now ?</string>
    <string name="created_p">Created %s</string>
    <string name="dark_visual">Dark Visual</string>
    <string name="delete">Delete</string>
    <string name="delete_note_">Delete \'%s\' ?</string>
    <string name="dim_navigation_buttons">Dim navigation buttons</string>
    <string name="divider">divider</string>
    <string name="enable_theater_mode">Enable Theater Mode</string>
    <string name="enable_word_detect_feedback">Enable Word Detect Feedback</string>
    <string name="enable_word_detection">Enable Word Detection</string>
    <string name="enable_word_detection_help">Enabling this option, will make Dark Notes register a word and whitespace every time a gesture ends at the right third of screen and a new one starts at the left third</string>
    <string name="height">Height</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="keep_screen_on_summary">Keep screen on (prevent lock) while capturing note</string>
    <string name="light_visual">Light Visual</string>
    <string name="line_height">Line Height</string>
    <string name="linebreak">Linebreak</string>
    <string name="multi_touch_guided_capture">Multi-touch guided capture</string>
    <string name="multi_touch_guided_capture_help">Recommended for multi-touch enabled devices. Keep holding a touch gesture with your left thumb and write with the right hand (invert if you are left handed !). Every time you take both hands off the screen, a word is registered (no whitespace gesture needed !). Do a 3 point touch on the screen to register a line break</string>
    <string name="multi_touch_guided_capture_write">Use both hands, hold touch and write</string>
    <string name="new_note">New note</string>
    <string name="next">Next</string>
    <string name="no_note_selected">No Note selected</string>
    <string name="no_notes_found">No Notes Found</string>
    <string name="no_text_to_share_was_typed">No text to share was typed</string>
    <string name="no_visual">No Visual Feedback</string>
    <string name="note_complete_ntap_share_icon_at_top_bar_to_export">Note complete\nTap share icon at top bar to export</string>
    <string name="note_not_started">Note not started</string>
    <string name="page_s">Page %s</string>
    <string name="pref_captureMethod_default">CAPTURE_PER_WHITESPACE_LINEBREAK</string>
    <string name="pref_captureVisualStyle_default">DARK</string>
    <string name="preview">Preview</string>
    <string name="render">Render</string>
    <string name="render_note">Render Note</string>
    <string name="rendering_">Rendering &#8230;</string>
    <string name="restart">Restart (!)</string>
    <string name="review">Review Note</string>
    <string name="saving_note_">Saving note &#8230;</string>
    <string name="select_a_note">Select a note in the note list</string>
    <string name="settings">Settings</string>
    <string name="share_reviewed_text">Share reviewed text</string>
    <string name="share_text">Share Text</string>
    <string name="show_visual_hints_for_word_detection_mode">Show visual hints for word detection mode when enabled</string>
    <string name="start_note">Start Note</string>
    <string name="tap_the_add_icon_at_top_top_bar_to_create_a_note">Tap the add icon at top bar to create a note</string>
    <string name="tap_the_edit_icon_at_top_bar_to_write_your_note">Tap the edit icon at top bar to write your note\nTap note title to edit its value</string>
    <string name="theater_mode_summary">All visual feedback is disabled, navigation buttons are dimmed, screen kept on, but brightness set to minimum</string>
    <string name="this_action_can_t_be_performed_using_an_empty_note">This action can\'t be performed using an empty note</string>
    <string name="this_device_doesn_t_have_a_vibrator">This device doesn\'t have a vibrator</string>
    <string name="this_note_is_empty">This note is empty</string>
    <string name="title">Title</string>
    <string name="title_activity_note_capture">NoteCaptureActivity</string>
    <string name="type_writed_text_here">Type writed text here</string>
    <string name="untitled_note">Untitled Note</string>
    <string name="vibrate_once_per_whitespace_and_twice_per_linebreak">Vibrate once per whitespace and twice per linebreak</string>
    <string name="vibration_feedback">Vibration feedback</string>
    <string name="vibration_feedback_help">Your device will briefly vibrate once when a word/whitespace is registered, and twice when a linebreak is registered. Your device must support vibration</string>
    <string name="view">View</string>
    <string name="whitespace">Whitespace</string>
    <string name="whitespaces_and_linebreaks">Whitespaces and Linebreaks</string>
    <string name="width">Width</string>
    <string name="width_per_capture">Width per capture</string>
    <string name="word_detection">Word Detection</string>
    <string name="word_detection_summary">Read Capture Help for more details on Word Detection</string>
    <string name="write_word">Write word</string>
    <string name="writing_param_">Writing %s &#8230;</string>
    <string name="you_still_need_to_press_the_back_button_to_finish_capture">You still need to press the \'back\' button to finish capture</string>
    <string name="writing_notes">Writing notes</string>
    <string name="writing_notes_text">Dark Notes uses a letter-by-letter or word-by-word capture method instead of thinking the screen as a whole single page to be written. A page is rendered afterwards by the app, arranging letters/words in sequence</string>
    <string name="rate">Rate</string>
    <string name="lh_wc_tip">* Try different settings that best matches your handwriting</string>
    <string name="release_all_touchs_to_register_the_linebreak">Release all touchs to register the linebreak</string>
    <string name="release_both_touchs_to_register_the_word">Release both touchs to register the word</string>
    <string name="keep_first_touch_pressed_and_use_a_second_touch_to_write">Keep first touch pressed and use a second touch to write</string>
    <string name="touch_three_points_at_same_time_to_register_a_linebreak">Touch three points at same time to register a linebreak</string>
    <string name="press_and_hold_a_point_on_screen_to_start_writing_a_word">Press and hold a point on screen to start writing a word</string>
</resources>
