<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAllCaps="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/divider"
        android:src="@drawable/divider" />

    <TextView
        android:id="@+id/fragment_note_detail_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:text="@string/untitled_note"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preview"
        android:textAllCaps="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/divider"
        android:src="@drawable/divider" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:padding="20dp" >

        <ImageView
            android:id="@+id/fragment_note_detail_image_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/preview" />

        <ProgressBar
            android:id="@+id/fragment_note_detail_progress_preview"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
        
        <LinearLayout 
            android:id="@+id/fragment_note_detail_layout_empty_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/fragment_note_detail_text_empty_preview"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableBottom="@drawable/ic_menu_edit"
                android:text="@string/note_not_started"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tap_the_edit_icon_at_top_bar_to_write_your_note" />
            
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/fragment_note_detail_text_created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/created_p" />

</LinearLayout>