<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dialog_render_note_text_label_width"
            style="@style/FormEditLabel"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/width" />

        <TextView
            android:id="@+id/dialog_render_note_text_label_height"
            style="@style/FormEditLabel"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/height" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/dialog_render_note_edit_width"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4" >
        </EditText>

        <EditText
            android:id="@+id/dialog_render_note_edit_height"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4" />
    </LinearLayout>

    <TextView
        android:id="@+id/dialog_render_note_text_label_line_height"
        style="@style/FormEditLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/line_height" />

    <SeekBar
        android:id="@+id/dialog_render_note_seek_line_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="2000" />

    <TextView
        android:id="@+id/dialog_render_note_text_label_capture_width"
        style="@style/FormEditLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/width_per_capture" />

    <SeekBar
        android:id="@+id/dialog_render_note_seek_capture_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="2000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lh_wc_tip"
        android:textAppearance="@android:style/TextAppearance.Small" />

</LinearLayout>